--- a/tabwriter.html
+++ b/tabwriter.html
@@ -2,10 +2,11 @@
   <head>
     <meta name="tab-writer">
     <meta description="converts formatted string to guitar tabulature">
+    <meta charset="utf-8">
     <script src="jquery-3.2.1.min.js" ></script>
   </head>
   <body>
-    <textarea id="input_textarea" rows="4" cols="75">
+    <textarea id="input_textarea" rows="4" cols="100">
     </textarea>
     <br />
     <canvas id="notation" width="1190" height="1683"
