more css styling, added background

--- a/tabwriter.html
+++ b/tabwriter.html
@@ -9,6 +9,10 @@
   <body>
     <div id="base">
     <div id="main-container">
+    <div id=title>
+      <h1 style="sans-serif">Tabwriter</h1>
+      <h3>Converts a formatted string to guitar tabulature notation<h3>
+    </div>
     <div id="input-panel">
       <textarea id="input_textarea" rows="4" cols="100">
       </textarea>
